# telebot2exl

./: README.md  main.py  pyproject.toml
src/: bot_db.py  export.py  g_collector.py
